--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,10 @@ android {
 
 dependencies {
 
+    //Dagger
+    implementation 'com.google.dagger:dagger:2.40.2'
+    kapt 'com.google.dagger:dagger-compiler:2.40.2'
+
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
