--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,12 +30,17 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures{
+    buildFeatures {
         viewBinding true
     }
 }
 
 dependencies {
+
+    // Koin
+    implementation "io.insert-koin:koin-core:3.1.3"
+    implementation "io.insert-koin:koin-android:3.1.3"
+    testImplementation "io.insert-koin:koin-test:3.1.3"
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
