предварительное добавление Room

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,11 @@ android {
 
 dependencies {
 
+    //Room
+    implementation 'androidx.room:room-runtime:2.4.1'
+    kapt 'androidx.room:room-compiler:2.4.1'
+    implementation 'androidx.room:room-ktx:2.4.1'
+
     //Jetpack navigation
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
