--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ android {
 
 dependencies {
 
+    implementation project(path: ':domain')
+    implementation project(path: ':data')
+
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 
