--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,43 +38,40 @@ android {
 
 dependencies {
 
-    implementation project(path: ':domain')
-    implementation project(path: ':data')
+    //Modules
+    implementation project(Modules.domain)
+    implementation project(Modules.data)
 
-    // Glide
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-
-    //Room
-    implementation 'androidx.room:room-runtime:2.4.1'
-    kapt 'androidx.room:room-compiler:2.4.1'
-    implementation 'androidx.room:room-ktx:2.4.1'
+    //Glide
+    implementation Glide.glide
 
     //Jetpack navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
-    implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
+    implementation JetpackNavigation.navigation_fragment
+    implementation JetpackNavigation.navigation_ui
 
     //Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
+    implementation Coroutines.coroutines_core
+    implementation Coroutines.coroutines_android
 
-    // Koin
-    implementation "io.insert-koin:koin-core:3.1.3"
-    implementation "io.insert-koin:koin-android:3.1.3"
-    testImplementation "io.insert-koin:koin-test:3.1.3"
+    //LifecycleComponents
+    implementation LifecycleComponents.runtime_ktx
+    implementation LifecycleComponents.viewmodel_ktx
 
-    // Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
+    //Koin
+    implementation Koin.koin_core
+    implementation Koin.koin_android
+    testImplementation Koin.koin_test
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    //Kotlin
+    implementation Kotlin.kotlin_cote_ktx
+
+    //Ui design
+    implementation Design.appcompat
+    implementation Design.material
+    implementation Design.constraint_layout
+
+    //Test
+    testImplementation TestImpl.junit
+    androidTestImplementation TestImpl.ext_junit
+    androidTestImplementation TestImpl.espresso
 }
