--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_7
-    targetCompatibility = JavaVersion.VERSION_1_7
+    sourceCompatibility Config.java_version
+    targetCompatibility Config.java_version
 }
 
 dependencies {
 
     //Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
+    implementation Coroutines.coroutines_core
 }
