--- a/data/build.gradle
+++ b/data/build.gradle
@@ -35,7 +35,7 @@ android {
 dependencies {
 
     //Modules
-    implementation project(Modules.domain)
+    api project(Modules.domain)
 
     //Room
     implementation Room.room_runtime
