--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation project(Modules.data)
     implementation project(Modules.mytimer)
 
+    implementation 'androidx.core:core-splashscreen:1.0.0-beta01'
+
     //Room
     implementation Room.room_runtime
     kapt Room.room_compiler
