--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GB_PProg">
+        android:theme="@style/Theme.MySplash">
         <activity
             android:name=".presentation.mainactivity.MainActivity"
             android:exported="true"
