--- a/myfirsttest/build.gradle
+++ b/myfirsttest/build.gradle
@@ -36,6 +36,7 @@ android {
 
 dependencies {
 
+
     //Kotlin
     implementation Kotlin.kotlin_cote_ktx
 
@@ -54,4 +55,6 @@ dependencies {
 
     testImplementation "org.mockito:mockito-core:4.0.0"
     testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
+
+    testImplementation "org.junit.jupiter:junit-jupiter:5.8.2"
 }
