тесты на response RetrofitService

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -30,6 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = Config.jvm_target
     }
+    sourceSets {
+        test.resources.srcDirs += 'src/test/res'
+    }
 }
 
 dependencies {
@@ -53,4 +56,7 @@ dependencies {
     testImplementation TestImpl.junit
     androidTestImplementation TestImpl.ext_junit
     androidTestImplementation TestImpl.espresso
+
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
 }
