тесты на getData() NetworkRepositoryImplTest

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -57,6 +57,9 @@ dependencies {
     androidTestImplementation TestImpl.ext_junit
     androidTestImplementation TestImpl.espresso
 
-    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation TestImpl.mockito_core
+    testImplementation TestImpl.mockito_kotlin
     testImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
+
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
 }
