--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     implementation project(Modules.mytimer)
     implementation project(Modules.myfirsttest)
 
+    implementation "com.google.dagger:dagger:2.41"
+    kapt "com.google.dagger:dagger-compiler:2.41"
+
     //Room
     implementation Room.room_runtime
     kapt Room.room_compiler
@@ -71,11 +74,6 @@ dependencies {
     //LifecycleComponents
     implementation LifecycleComponents.runtime_ktx
     implementation LifecycleComponents.viewmodel_ktx
-
-    //Koin
-    implementation Koin.koin_core
-    implementation Koin.koin_android
-    testImplementation Koin.koin_test
 
     //Kotlin
     implementation Kotlin.kotlin_cote_ktx
