--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,8 +46,9 @@ dependencies {
     implementation project(Modules.domain)
     implementation project(Modules.data)
 
-    implementation "com.google.dagger:dagger:2.41"
-    kapt "com.google.dagger:dagger-compiler:2.41"
+    //Dagger
+    implementation Dagger.dagger_d
+    kapt Dagger.dagger_k
 
     //Room
     implementation Room.room_runtime
