создан тестовый модуль

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     //Modules
     implementation project(Modules.domain)
     implementation project(Modules.data)
+    implementation project(Modules.mylibrary)
 
     //Dagger
     implementation Dagger.dagger_d
