--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation project(Modules.domain)
     implementation project(Modules.data)
     implementation project(Modules.utils)
+    implementation project(Modules.myTimer)
 
     //Dagger
     implementation Dagger.dagger_d
