--- a/myTimer/build.gradle
+++ b/myTimer/build.gradle
@@ -1,27 +1,20 @@
 plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
+    id 'com.android.library'
+    id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
-    id 'androidx.navigation.safeargs'
 }
 
 android {
     compileSdk Config.compile_sdk
 
     defaultConfig {
-        applicationId Config.application_id
         minSdk Config.min_sdk
         targetSdk Config.target_sdk
-        versionCode Releases.version_code
-        versionName Releases.version_name
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
-    testOptions {
-        unitTests {
-            includeAndroidResources = true
-        }
-    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -44,33 +37,11 @@ dependencies {
 
     //Modules
     implementation project(Modules.domain)
-    implementation project(Modules.data)
     implementation project(Modules.utils)
-    implementation project(Modules.myTimer)
 
     //Dagger
     implementation Dagger.dagger_d
     kapt Dagger.dagger_k
-
-    //Room
-    implementation Room.room_runtime
-    kapt Room.room_compiler
-    implementation Room.room_ktx
-
-    // Retrofit
-    implementation Retrofit.retrofit
-    implementation Retrofit.retrofit_converter_gson
-
-    //okHttp
-    implementation OkHttpDeps.ok_http
-    implementation OkHttpDeps.ok_http_logging_interceptor
-
-    //Glide
-    implementation Glide.glide
-
-    //Jetpack navigation
-    implementation JetpackNavigation.navigation_fragment
-    implementation JetpackNavigation.navigation_ui
 
     //Coroutines
     implementation Coroutines.coroutines_core
@@ -92,13 +63,4 @@ dependencies {
     testImplementation TestImpl.junit
     androidTestImplementation TestImpl.ext_junit
     androidTestImplementation TestImpl.espresso
-
-    //Robolectric
-    testImplementation 'org.robolectric:robolectric:4.5.1'
-    testImplementation 'androidx.test:core:1.4.0'
-    testImplementation 'androidx.test:runner:1.4.0'
-    testImplementation 'androidx.test.ext:junit:1.1.3'
-    testImplementation 'androidx.test.ext:truth:1.4.0'
-    testImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    testImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
 }
