--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,8 +91,8 @@ dependencies {
 
     //Test
     testImplementation TestImpl.junit
-    androidTestImplementation TestImpl.ext_junit
-    androidTestImplementation TestImpl.espresso
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //Robolectric
     testImplementation 'org.robolectric:robolectric:4.5.1'
