--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
 
     //Dagger
     implementation Dagger.dagger_d
+    androidTestImplementation 'androidx.test:rules:1.4.1-alpha05'
     kapt Dagger.dagger_k
 
     //Room
@@ -92,7 +93,7 @@ dependencies {
     //Test
     testImplementation TestImpl.junit
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha05'
 
     //UI Automator
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
@@ -103,6 +104,6 @@ dependencies {
     testImplementation 'androidx.test:runner:1.4.0'
     testImplementation 'androidx.test.ext:junit:1.1.3'
     testImplementation 'androidx.test.ext:truth:1.4.0'
-    testImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha05'
     testImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
 }
