--- a/myTranslator/build.gradle
+++ b/myTranslator/build.gradle
@@ -69,4 +69,9 @@ dependencies {
     testImplementation TestImpl.junit
     androidTestImplementation TestImpl.ext_junit
     androidTestImplementation TestImpl.espresso_core
+
+    testImplementation TestImpl.mockito_core
+    testImplementation TestImpl.mockito_kotlin
+    testImplementation "org.mockito:mockito-inline:4.0.0"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
 }
